# Sistemas_Distribuidos_Practica1

fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fileManager  fileManagerClient  fileManagerServer  filemanager.cpp  filemanager.h  filemanagerMainClient.cpp  filemanagerMainServer.cpp  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  main_fm.cpp  utils.h
fileManager/dirpruebacli/: prueba2.txt
fileManager/dirpruebaserv (backup de ficheros para pruebas)/: prueba4.txt  prueba6.txt
fileManager/server/dirpruebaserv (backup de ficheros para pruebas)/: prueba5.txt
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_multMatrix.cpp  multMatrix  multMatrixServer  multmatrix.cpp  multmatrix.h  multmatrixMainClient.cpp  multmatrixMainServer.cpp  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt  utils.cpp
multMatrix/client/: multMatrixClient
multMatrix/server/: resultado.txt  resultado2.txt
